träning om indexof i array

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>JavaScript  array search Elements</title>
 </head>
 <body>
+    <div id="all"></div>
+    <div id="special"></div>
+
     <script src="main.js"></script>
 </body>
 </html>
